styles/global.css
a {
  color: #ffffff;
  text-decoration: none;
}

footer {
  padding: 40px;
  margin-top: auto;
  text-align: center;
  background-color: #303030;
  /* position: fixed;
  bottom: 0;
  width: 100%; */
}

footer p {
  color: white;
}

.layout {
  min-height: 100vh;
  display: flex;
  flex-direction: column;
}

#header {
  font-weight: 900;
  color: #ff1744;
  font-style: italic;
  text-decoration: underline;
}

